# my-arithmetic-dchapart

./: .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: main.yml
my_arithmetic_dchapart/: __init__.py
tests/: __init__.py
