[tool.poetry]
name = "my-arithmetic-dchapart"
version = "0.1.0"
description = ""
authors = ["Damien Chapart <damien.chapart@etudiant.univ-lr.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry-dynamic-versioning = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
