[tool.poetry]
name = "my-arithmetic-dchapart"
version = "0.1.0"
description = ""
authors = ["Damien Chapart <damien.chapart@etudiant.univ-lr.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry-dynamic-versioning = "^1.2.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^1.25.2"
sphinxcontrib-napoleon = "^0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
